fix(rpc): subtitle too close to room title
This is a continuation of #e02ce4a. While the room title was no longer being cut off, there was zero space between them with ascending characters (e.g. 'g').

--- a/res/css/views/rooms/_RoomRPC.pcss
+++ b/res/css/views/rooms/_RoomRPC.pcss
@@ -18,7 +18,7 @@ Please see LICENSE files in the repository root for full details.
 /* adjust subtitle down */
 .mx_RoomTile_dm
 .mx_RoomTile_subtitle {
-    top: 0px !important;
+    top: 1px !important;
 }
 
 /* fix dm room title ascenders clipping subtitle */
